# validation-py

./: README.md  setup.cfg  setup.py
example/flask_app/: __init__.py
example/flask_app/templates/: home.html  success.html
src/flask_validation/: flask_validation.py
src/validation/: base.py  rules.py  validation.py  validation_message.py
validation/: __init__.py
validation/flask_validation/: flask_validation.py
