[metadata]
name = validation-py
version = attr: validation.__version__
description = Validation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jedymatt/validation-py
author = Jedy Matt Tabasco
author_email = jedymatt@gmail.com
license = MIT
license_files =
    LICENSE
project_urls =
    Source = https://github.com/jedymatt/validation-py
    Tracker = https://github.com/jedymatt/validation-py/issues
keywords = validation, validator, flask

[options]
packages = find:

[options.packages.find]
include = 
    validation.*

[options.extras_require]
flask =
    flask>=3.0.0, <4.0.0